--- a/wwww/index.html
+++ b/wwww/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>List of Fruits</h1>
   <ul>
-    <li>Apple</li>
+    <li>Apple1</li>
     <li>Banana</li>
     <li>Orange</li>
     <li>Grapes</li>
